@@ -1,1 +1,4 @@
 # netty-office-dispute
+
+run with command:
+java -server -XX:+AggressiveOpts -Xmx4G -Xms4G -jar target/hello-kitty.jar
